@@ -1,4 +1,4 @@
-package eu.gaiax.wizard.core.service.service_offer;
+package eu.gaiax.wizard.core.service.resource;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.core.type.TypeReference;
@@ -18,6 +18,7 @@ import eu.gaiax.wizard.api.model.PageResponse;
 import eu.gaiax.wizard.api.model.ResourceFilterResponse;
 import eu.gaiax.wizard.api.model.ResourceType;
 import eu.gaiax.wizard.api.model.did.ServiceEndpointConfig;
+import eu.gaiax.wizard.api.model.request.ParticipantValidatorRequest;
 import eu.gaiax.wizard.api.model.service_offer.CreateResourceRequest;
 import eu.gaiax.wizard.api.model.setting.ContextConfig;
 import eu.gaiax.wizard.api.utils.CommonUtils;
@@ -27,7 +28,7 @@ import eu.gaiax.wizard.api.utils.Validate;
 import eu.gaiax.wizard.core.service.credential.CredentialService;
 import eu.gaiax.wizard.core.service.hashing.HashingService;
 import eu.gaiax.wizard.core.service.participant.ParticipantService;
-import eu.gaiax.wizard.core.service.participant.model.request.ParticipantValidatorRequest;
+import eu.gaiax.wizard.core.service.service_offer.PolicyService;
 import eu.gaiax.wizard.core.service.signer.SignerService;
 import eu.gaiax.wizard.core.service.ssl.CertificateService;
 import eu.gaiax.wizard.dao.entity.Credential;
@@ -56,6 +57,8 @@ import java.time.LocalDateTime;
 import java.time.ZoneOffset;
 import java.time.format.DateTimeFormatter;
 import java.util.*;
+
+import static eu.gaiax.wizard.api.utils.StringPool.*;
 
 @Service
 @Slf4j
@@ -86,50 +89,33 @@ public class ResourceService extends BaseService<Resource, UUID> {
 
     private final ServiceEndpointConfig serviceEndpointConfig;
 
+    private final PolicyService policyService;
+
     @Value("${wizard.host.wizard}")
     private String wizardHost;
 
     @NotNull
-    private static List<Map<String, Object>> getMaps(Participant participant) {
+    private static List<Map<String, Object>> getPermissionMaps(Participant participant) {
         List<Map<String, Object>> permission = new ArrayList<>();
         Map<String, Object> perMap = new HashMap<>();
-        perMap.put("target", participant.getDid());
-        perMap.put("assigner", participant.getDid());
-        perMap.put("action", "view");
+        perMap.put(TARGET, participant.getDid());
+        perMap.put(ASSIGNER, participant.getDid());
+        perMap.put(ACTION, "view");
 
-        /*List<Map<String, Object>> constraint = new ArrayList<>();
-        Map<String, Object> constraintMap = new HashMap<>();
-        constraintMap.put("default", "allow");
-        constraint.add(constraintMap);
-
-        perMap.put("constraint", constraint);*/
         permission.add(perMap);
         return permission;
     }
 
     @SneakyThrows
     @Transactional(isolation = Isolation.READ_UNCOMMITTED, propagation = Propagation.REQUIRES_NEW)
-    public Resource createResource(CreateResourceRequest request, String id) throws JsonProcessingException {
+    public Resource createResource(CreateResourceRequest request, String id) {
         Participant participant;
         if (StringUtils.hasText(id)) {
-            participant = this.participantRepository.findById(UUID.fromString(id)).orElse(null);
-            Validate.isNull(participant).launch(new BadDataException("participant.not.found"));
+            participant = this.participantRepository.findById(UUID.fromString(id)).orElseThrow(() -> new BadDataException("participant.not.found"));
+            this.addPrivateKey(participant, request);
 
-            if (participant.isKeyStored()) {
-                if (!this.vault.get(participant.getId().toString()).containsKey("pkcs8.key")) {
-                    throw new BadDataException("private.key.not.found");
-                }
-
-                request.setPrivateKey(this.vault.get(participant.getId().toString()).get("pkcs8.key").toString());
-                request.setVerificationMethod(participant.getDid());
-            }
-            if (request.isStoreVault() && !participant.isKeyStored()) {
-                this.certificateService.uploadCertificatesToVault(participant.getId().toString(), null, null, null, request.getPrivateKey());
-                participant.setKeyStored(true);
-                this.participantRepository.save(participant);
-            }
             Credential participantCred = this.credentialService.getByParticipantWithCredentialType(participant.getId(), CredentialTypeEnum.LEGAL_PARTICIPANT.getCredentialType());
-            this.signerService.validateRequestUrl(Collections.singletonList(participantCred.getVcUrl()), "participant.url.not.found", null);
+            this.signerService.validateRequestUrl(Collections.singletonList(participantCred.getVcUrl()), List.of(GX_LEGAL_PARTICIPANT), "participant.url.not.found", null);
         } else {
             ParticipantValidatorRequest participantValidatorRequest = new ParticipantValidatorRequest(request.getParticipantJsonUrl(), request.getVerificationMethod(), request.getPrivateKey(), false, true);
             participant = this.participantService.validateParticipant(participantValidatorRequest);
@@ -139,27 +125,29 @@ public class ResourceService extends BaseService<Resource, UUID> {
         this.validateResourceRequest(request);
         String name = "resource_" + UUID.randomUUID();
         String json = this.resourceVc(request, participant, name);
-        String hostUrl = this.wizardHost + participant.getId() + "/" + name + ".json";
+        String hostUrl = this.wizardHost + participant.getId() + "/" + name + JSON_EXTENSION;
+
         if (!participant.isOwnDidSolution()) {
             this.signerService.addServiceEndpoint(participant.getId(), hostUrl, this.serviceEndpointConfig.linkDomainType(), hostUrl);
         }
+
         if (StringUtils.hasText(json)) {
             Credential resourceVc = this.credentialService.createCredential(json, hostUrl, CredentialTypeEnum.RESOURCE.getCredentialType(), "", participant);
             Resource resource = Resource.builder().name(request.getCredentialSubject().get("gx:name").toString())
                     .credential(resourceVc)
-                    .type(request.getCredentialSubject().get("type").toString())
+                    .type(request.getCredentialSubject().get(TYPE).toString())
                     .description((String) request.getCredentialSubject().getOrDefault("gx:description", null))
                     .participant(participant)
                     .build();
 
             if (resource.getType().equals(ResourceType.VIRTUAL_DATA_RESOURCE.getValue())) {
-                SimpleDateFormat formatter = new SimpleDateFormat("yyyy-MM-dd HH:mm:ss.SSS");
-                if (request.getCredentialSubject().containsKey("gx:obsoleteDateTime")) {
-                    resource.setObsoleteDate(formatter.parse((String) request.getCredentialSubject().get("gx:obsoleteDateTime")));
+                SimpleDateFormat formatter = new SimpleDateFormat(DATE_TIME_FORMAT);
+                if (request.getCredentialSubject().containsKey(OBSOLETE_TIME)) {
+                    resource.setObsoleteDate(formatter.parse((String) request.getCredentialSubject().get(OBSOLETE_TIME)));
                 }
 
-                if (request.getCredentialSubject().containsKey("gx:expirationDateTime")) {
-                    resource.setExpiryDate(formatter.parse((String) request.getCredentialSubject().get("gx:expirationDateTime")));
+                if (request.getCredentialSubject().containsKey(EXPIRATION_TIME)) {
+                    resource.setExpiryDate(formatter.parse((String) request.getCredentialSubject().get(EXPIRATION_TIME)));
                 }
             }
 
@@ -167,172 +155,191 @@ public class ResourceService extends BaseService<Resource, UUID> {
         }
 
         if (StringUtils.hasText(id) && request.isStoreVault() && !participant.isKeyStored()) {
-            this.certificateService.uploadCertificatesToVault(participant.getId().toString(), null, null, null, request.getPrivateKey());
-            participant.setKeyStored(true);
-            this.participantRepository.save(participant);
+            this.storePrivateKeyToVault(participant, request.getPrivateKey());
         }
         return null;
     }
 
-    private String hostOdrlPolicy(Participant participant) throws JsonProcessingException {
+    private void storePrivateKeyToVault(Participant participant, String privateKey) {
+        this.certificateService.uploadCertificatesToVault(participant.getId().toString(), null, null, null, privateKey);
+        participant.setKeyStored(true);
+        this.participantRepository.save(participant);
+    }
+
+    private void addPrivateKey(Participant participant, CreateResourceRequest request) {
+        if (participant.isKeyStored()) {
+            if (!this.vault.get(participant.getId().toString()).containsKey("pkcs8.key")) {
+                throw new BadDataException("private.key.not.found");
+            }
+
+            request.setPrivateKey(this.vault.get(participant.getId().toString()).get("pkcs8.key").toString());
+            request.setVerificationMethod(participant.getDid());
+        }
+
+        if (request.isStoreVault() && !participant.isKeyStored()) {
+            this.certificateService.uploadCertificatesToVault(participant.getId().toString(), null, null, null, request.getPrivateKey());
+            participant.setKeyStored(true);
+            this.participantRepository.save(participant);
+        }
+    }
+
+    private String createAndHostPolicy(Participant participant) throws JsonProcessingException {
         Map<String, Object> policyMap = new HashMap<>();
 
-        String hostUrl = participant.getId() + "/resource_policy_" + UUID.randomUUID() + ".json";
-        policyMap.put("@context", this.contextConfig.ODRLPolicy());
-        policyMap.put("type", "Offer");
-        policyMap.put("id", this.wizardHost + hostUrl);
-        List<Map<String, Object>> permission = getMaps(participant);
+        String hostUrl = participant.getId() + "/resource_policy_" + UUID.randomUUID() + JSON_EXTENSION;
+        policyMap.put(CONTEXT, this.contextConfig.ODRLPolicy());
+        policyMap.put(TYPE, "Offer");
+        policyMap.put(ID, this.wizardHost + hostUrl);
+        List<Map<String, Object>> permission = getPermissionMaps(participant);
         policyMap.put("permission", permission);
         String policyJson = this.objectMapper.writeValueAsString(policyMap);
-        File file = new File("/tmp/" + hostUrl);
-        try {
-            FileUtils.writeStringToFile(file, policyJson, Charset.defaultCharset());
-            this.s3Utils.uploadFile(hostUrl, file);
-            return this.wizardHost + hostUrl;
-        } catch (Exception e) {
-            log.error("Error while hosting service offer json for participant:{},error:{}", hostUrl, e.getMessage());
-            throw new BadDataException(e.getMessage());
-        } finally {
-            CommonUtils.deleteFile(file);
-        }
+
+        this.policyService.hostPolicy(policyJson, hostUrl);
+        return this.wizardHost + hostUrl;
     }
 
     public void validateResourceRequest(CreateResourceRequest request) throws JsonProcessingException {
-        Validate.isFalse(StringUtils.hasText(request.getCredentialSubject().get("gx:name").toString())).launch("invalid.resource.name");
+        Validate.isFalse(StringUtils.hasText(request.getCredentialSubject().get(NAME).toString())).launch("invalid.resource.name");
         this.validateAggregationOf(request);
         JsonObject jsonObject = JsonParser.parseString(this.objectMapper.writeValueAsString(request)).getAsJsonObject();
 
-        if (request.getCredentialSubject().get("type").toString().contains("Physical")) {
-
-            if (request.getCredentialSubject().containsKey("gx:maintainedBy")) {
-                JsonArray aggregationArray = jsonObject
-                        .getAsJsonObject("credentialSubject")
-                        .getAsJsonArray("gx:maintainedBy");
-                List<String> ids = new ArrayList<>();
-
-                for (int i = 0; i < aggregationArray.size(); i++) {
-                    JsonObject aggregationObject = aggregationArray.get(i).getAsJsonObject();
-                    String idValue = aggregationObject.get("id").getAsString();
-                    ids.add(idValue);
-                }
-                this.signerService.validateRequestUrl(ids, "maintained.by.not.found", null);
-            }
-            if (request.getCredentialSubject().containsKey("gx:ownedBy")) {
-                JsonArray aggregationArray = jsonObject
-                        .getAsJsonObject("credentialSubject")
-                        .getAsJsonArray("gx:ownedBy");
-                List<String> ids = new ArrayList<>();
-
-                for (int i = 0; i < aggregationArray.size(); i++) {
-                    JsonObject aggregationObject = aggregationArray.get(i).getAsJsonObject();
-                    String idValue = aggregationObject.get("id").getAsString();
-                    ids.add(idValue);
-                }
-                this.signerService.validateRequestUrl(ids, "owned.by.not.found", null);
-            }
-            if (request.getCredentialSubject().containsKey("gx:manufacturedBy")) {
-                JsonArray aggregationArray = jsonObject
-                        .getAsJsonObject("credentialSubject")
-                        .getAsJsonArray("gx:manufacturedBy");
-                List<String> ids = new ArrayList<>();
-
-                for (int i = 0; i < aggregationArray.size(); i++) {
-                    JsonObject aggregationObject = aggregationArray.get(i).getAsJsonObject();
-                    String idValue = aggregationObject.get("id").getAsString();
-                    ids.add(idValue);
-                }
-                this.signerService.validateRequestUrl(ids, "manufactured.by.not.found", null);
-            }
+        if (request.getCredentialSubject().get(TYPE).toString().contains(PHYSICAL)) {
+            this.validatePhysicalResource(request, jsonObject);
         } else {
-            if (request.getCredentialSubject().containsKey("gx:copyrightOwnedBy")) {
-                JsonArray aggregationArray = jsonObject
-                        .getAsJsonObject("credentialSubject")
-                        .getAsJsonArray("gx:copyrightOwnedBy");
-                List<String> ids = new ArrayList<>();
-
-                for (int i = 0; i < aggregationArray.size(); i++) {
-                    JsonObject aggregationObject = aggregationArray.get(i).getAsJsonObject();
-                    String idValue = aggregationObject.get("id").getAsString();
-                    ids.add(idValue);
-                }
-                this.signerService.validateRequestUrl(ids, "manufactured.by.of.not.found", null);
-            }
-            if (request.getCredentialSubject().containsKey("gx:producedBy")) {
-                JsonObject produceBy = jsonObject
-                        .getAsJsonObject("credentialSubject")
-                        .getAsJsonObject("gx:producedBy");
-
-                String idValue = produceBy.get("id").getAsString();
-
-                this.signerService.validateRequestUrl(List.of(idValue), "produced.by.not.found", null);
-            }
-        }
-        if (request.getCredentialSubject().containsKey("gx:containsPII")) {
-            if (Boolean.parseBoolean(request.getCredentialSubject().get("gx:containsPII").toString()) == true) {
-                if (!request.getCredentialSubject().containsKey("gx:legalBasis")) {
-                    throw new BadDataException("invalid.legal.basis");
-                }
-                if (!request.getCredentialSubject().containsKey("gx:email") || !request.getCredentialSubject().containsKey("gx:contactNo")) {
-                    throw new BadDataException("data.protection.contact.required");
-                }
-            }
+            this.validateVirtualResource(request, jsonObject);
         }
     }
 
-
-    private void validateAggregationOf(CreateResourceRequest request) throws JsonProcessingException {
-        if (request.getCredentialSubject().containsKey("gx:aggregationOf")) {
-            JsonObject jsonObject = JsonParser.parseString(this.objectMapper.writeValueAsString(request)).getAsJsonObject();
+    private void validatePhysicalResource(CreateResourceRequest request, JsonObject jsonObject) {
+        if (request.getCredentialSubject().containsKey(MAINTAINED_BY)) {
             JsonArray aggregationArray = jsonObject
-                    .getAsJsonObject("credentialSubject")
-                    .getAsJsonArray("gx:aggregationOf");
+                    .getAsJsonObject(CREDENTIAL_SUBJECT)
+                    .getAsJsonArray(MAINTAINED_BY);
             List<String> ids = new ArrayList<>();
 
             for (int i = 0; i < aggregationArray.size(); i++) {
                 JsonObject aggregationObject = aggregationArray.get(i).getAsJsonObject();
-                String idValue = aggregationObject.get("id").getAsString();
+                String idValue = aggregationObject.get(ID).getAsString();
                 ids.add(idValue);
             }
-            this.signerService.validateRequestUrl(ids, "aggregation.of.not.found", Collections.singletonList("holderSignature"));
+            this.signerService.validateRequestUrl(ids, List.of(GX_LEGAL_PARTICIPANT), "maintained.by.not.found", null);
+        }
+        if (request.getCredentialSubject().containsKey(OWNED_BY)) {
+            JsonArray aggregationArray = jsonObject
+                    .getAsJsonObject(CREDENTIAL_SUBJECT)
+                    .getAsJsonArray(OWNED_BY);
+            List<String> ids = new ArrayList<>();
+
+            for (int i = 0; i < aggregationArray.size(); i++) {
+                JsonObject aggregationObject = aggregationArray.get(i).getAsJsonObject();
+                String idValue = aggregationObject.get(ID).getAsString();
+                ids.add(idValue);
+            }
+            this.signerService.validateRequestUrl(ids, List.of(GX_LEGAL_PARTICIPANT), "owned.by.not.found", null);
+        }
+        if (request.getCredentialSubject().containsKey(MANUFACTURED_BY)) {
+            JsonArray aggregationArray = jsonObject
+                    .getAsJsonObject(CREDENTIAL_SUBJECT)
+                    .getAsJsonArray(MANUFACTURED_BY);
+            List<String> ids = new ArrayList<>();
+
+            for (int i = 0; i < aggregationArray.size(); i++) {
+                JsonObject aggregationObject = aggregationArray.get(i).getAsJsonObject();
+                String idValue = aggregationObject.get(ID).getAsString();
+                ids.add(idValue);
+            }
+            this.signerService.validateRequestUrl(ids, List.of(GX_LEGAL_PARTICIPANT), "manufactured.by.not.found", null);
+        }
+    }
+
+    private void validateVirtualResource(CreateResourceRequest request, JsonObject jsonObject) {
+        if (request.getCredentialSubject().containsKey(COPYRIGHT_OWNED_BY)) {
+            JsonArray aggregationArray = jsonObject
+                    .getAsJsonObject(CREDENTIAL_SUBJECT)
+                    .getAsJsonArray(COPYRIGHT_OWNED_BY);
+            List<String> ids = new ArrayList<>();
+
+            for (int i = 0; i < aggregationArray.size(); i++) {
+                JsonObject aggregationObject = aggregationArray.get(i).getAsJsonObject();
+                String idValue = aggregationObject.get(ID).getAsString();
+                ids.add(idValue);
+            }
+            this.signerService.validateRequestUrl(ids, List.of(GX_LEGAL_PARTICIPANT), "manufactured.by.of.not.found", null);
+        }
+        if (request.getCredentialSubject().containsKey(PRODUCED_BY)) {
+            JsonObject produceBy = jsonObject
+                    .getAsJsonObject(CREDENTIAL_SUBJECT)
+                    .getAsJsonObject(PRODUCED_BY);
+
+            String idValue = produceBy.get(ID).getAsString();
+
+            this.signerService.validateRequestUrl(List.of(idValue), List.of(GX_LEGAL_PARTICIPANT), "produced.by.not.found", null);
+        }
+
+        if (request.getCredentialSubject().containsKey(CONTAINS_PII) && Boolean.parseBoolean(request.getCredentialSubject().get(CONTAINS_PII).toString())) {
+
+            if (!request.getCredentialSubject().containsKey(LEGAL_BASIS)) {
+                throw new BadDataException("invalid.legal.basis");
+            }
+            if (!(request.getCredentialSubject().containsKey(GX_EMAIL) || request.getCredentialSubject().containsKey(GX_URL))) {
+                throw new BadDataException("data.protection.contact.required");
+            }
+        }
+    }
+
+    private void validateAggregationOf(CreateResourceRequest request) throws JsonProcessingException {
+        if (request.getCredentialSubject().containsKey(AGGREGATION_OF)) {
+            JsonObject jsonObject = JsonParser.parseString(this.objectMapper.writeValueAsString(request)).getAsJsonObject();
+            JsonArray aggregationArray = jsonObject
+                    .getAsJsonObject(CREDENTIAL_SUBJECT)
+                    .getAsJsonArray(AGGREGATION_OF);
+            List<String> ids = new ArrayList<>();
+
+            for (int i = 0; i < aggregationArray.size(); i++) {
+                JsonObject aggregationObject = aggregationArray.get(i).getAsJsonObject();
+                String idValue = aggregationObject.get(ID).getAsString();
+                ids.add(idValue);
+            }
+            this.signerService.validateRequestUrl(ids, new ArrayList<>(ResourceType.getValueSet()), "aggregation.of.not.found", Collections.singletonList("holderSignature"));
         }
     }
 
     public String resourceVc(CreateResourceRequest request, Participant participant, String name) throws
             JsonProcessingException {
-        String id = this.wizardHost + participant.getId() + "/" + name + ".json";
+        String id = this.wizardHost + participant.getId() + "/" + name + JSON_EXTENSION;
         String issuanceDate = LocalDateTime.now().atZone(ZoneOffset.UTC).format(DateTimeFormatter.ISO_OFFSET_DATE_TIME);
         Map<String, Object> resourceRequest = new HashMap<>();
         Map<String, Object> map = new HashMap<>();
-        resourceRequest.put("@context", this.contextConfig.resource());
-        resourceRequest.put("type", Collections.singleton("VerifiableCredential"));
-        resourceRequest.put("id", id);
-        resourceRequest.put("issuer", participant.getDid());
-        resourceRequest.put("issuanceDate", issuanceDate);
+        resourceRequest.put(CONTEXT, this.contextConfig.resource());
+        resourceRequest.put(TYPE, Collections.singleton(VERIFIABLE_CREDENTIAL));
+        resourceRequest.put(ID, id);
+        resourceRequest.put(ISSUER, participant.getDid());
+        resourceRequest.put(ISSUANCE_DATE, issuanceDate);
         Map<String, Object> credentialSub = request.getCredentialSubject();
         if (credentialSub != null) {
-            credentialSub.put("@context", this.contextConfig.resource());
-            credentialSub.put("id", id);
-            if (request.getCredentialSubject().get("type").toString().contains("Physical")) {
-                credentialSub.put("type", "gx:" + request.getCredentialSubject().get("type").toString());
+            credentialSub.put(CONTEXT, this.contextConfig.resource());
+            credentialSub.put(ID, id);
+            if (request.getCredentialSubject().get(TYPE).toString().contains("Physical")) {
+                credentialSub.put(TYPE, "gx:" + request.getCredentialSubject().get(TYPE).toString());
             } else {
-                if (!StringUtils.hasText(request.getCredentialSubject().get("subType").toString())) {
+                if (!StringUtils.hasText(request.getCredentialSubject().get(SUBTYPE).toString())) {
                     throw new BadDataException("sub.type.required");
                 }
-                credentialSub.put("type", "gx:" + request.getCredentialSubject().get("subType").toString());
-                credentialSub.remove("subType");
-                if (request.getCredentialSubject().containsKey("gx:policy")) {
-                    Map<String, String> policy = this.objectMapper.convertValue(request.getCredentialSubject().get("gx:policy"), Map.class);
-                    String customAttribute = policy.get("gx:customAttribute");
-                    credentialSub.put("gx:policy", List.of(customAttribute));
+                credentialSub.put(TYPE, "gx:" + request.getCredentialSubject().get(SUBTYPE).toString());
+                credentialSub.remove(SUBTYPE);
+                if (request.getCredentialSubject().containsKey(GX_POLICY) && request.getCredentialSubject().get(GX_POLICY) != null) {
+                    Map<String, String> policy = this.objectMapper.convertValue(request.getCredentialSubject().get(GX_POLICY), Map.class);
+                    String customAttribute = policy.get(CUSTOM_ATTRIBUTE);
+                    credentialSub.put(GX_POLICY, List.of(customAttribute));
                 } else {
-                    credentialSub.put("gx:policy", List.of(this.hostOdrlPolicy(participant)));
+                    credentialSub.put(GX_POLICY, List.of(this.createAndHostPolicy(participant)));
                 }
             }
         }
-        resourceRequest.put("credentialSubject", credentialSub);
+        resourceRequest.put(CREDENTIAL_SUBJECT, credentialSub);
         map.put("resource", resourceRequest);
         Map<String, Object> resourceMap = new HashMap<>();
-        resourceMap.put("issuer", participant.getDid());
+        resourceMap.put(ISSUER, participant.getDid());
         resourceMap.put("verificationMethod", request.getVerificationMethod());
         resourceMap.put("vcs", map);
         resourceMap.put("isVault", participant.isKeyStored());
@@ -345,7 +352,7 @@ public class ResourceService extends BaseService<Resource, UUID> {
     }
 
     public void hostResourceJson(String resourceJson, String hostedPath) {
-        File file = new File("/tmp/" + hostedPath);
+        File file = new File(TEMP_FOLDER + hostedPath);
         try {
             FileUtils.writeStringToFile(file, resourceJson, Charset.defaultCharset());
             this.s3Utils.uploadFile(hostedPath, file);
